# mm-adapter

./: README.md  pyproject.toml  requirements.txt
mm_adapter/evaluation/: dataset_result.py
mm_adapter/metrics/: __init__.py  _base_metric.py
mm_adapter/models/: __init__.py  _base_model.py  clip_classifier.py
mm_adapter/models/clip/: __init__.py  clip_adapter.py  clip_base.py  clip_linear.py  clip_mlp_head.py  clip_mm_mlp_adapter.py  clip_transformer.py  clip_transformer_adapter.py  clip_transformer_adapter_text.py  clip_transformer_downscaled.py  clip_transformer_w_hypernet.py
mm_adapter/models/clip/modules/: masked_multi_head_attention.py  masked_multi_head_attention_downsampled.py
mm_adapter/pipelines/: evaluate.py  train.py
mm_adapter/pipelines/types/: learner_args.py
mm_adapter/pipelines/utils/: initializers.py  utils.py
mm_adapter/utils/data/: utils.py  zero_shot_dataset.py
mm_adapter/utils/data/datasets/: __init__.py  _labels.py  caltech101.py  eurosat.py  oxford_flowers.py  stanford_cars.py  sun397.py  ucf101.py
